k8s-helm/releases/argocd/yml/httproute-nonprod.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

# 기본 설정
metadata:
  name: argocd
  namespace: argocd

# 스펙
spec:
  parentRefs:
    - name: devths-gateway
      namespace: nginx-gateway

  # 도메인 명
  hostnames:
    - "nonprod.argo.devths.com"

  # 참조 규칙
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
